tests/ui/link-native-libs/manual-link-bad-form.rs
//@ compile-flags:-l static=

fn main() {
}

<<<<<<< HEAD
// ferrocene-annotations: um_rustc_l
=======
//~? ERROR library name must not be empty
>>>>>>> pull-upstream-temp--do-not-use-for-real-code
